# HACKATHON_DATA

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
agents/: __init__.py
agents/common/: __init__.py  models.py
agents/extractor/: __init__.py  core.py
agents/indexer/: __init__.py
agents/pipeline/: __init__.py  runner.py
agents/prompts/: opportunity_extraction.md
agents/repo_analyzer/: __init__.py
agents/scraper/: __init__.py  http_scraper.py  raw_store.py  source_registry.py
backend/: main.py  repository.py
config/: sources.example.json  sources.json
coordination/: BOARD.md  DECISIONS.md  GEMINI_TASK_004.md  GEMINI_TASK_008.md  GEMINI_TASK_012.md  HANDOFFS.md  README.md
docker/: docker-compose.yml
docs/: architecture.md
scripts/: run_pipeline.py  smoke_source.py
tests/unit/: test_api.py  test_extractor.py  test_http_scraper.py  test_models.py  test_pipeline.py  test_raw_store.py  test_source_registry.py
