[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "hackathon-data"
version = "0.1.0"
description = "Multi-agent pipeline for aggregating and researching hackathons"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "playwright>=1.49,<2",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "pydantic>=2.10,<3",
  "pygithub>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
ai = [
  "google-genai>=1,<2",
  "sentence-transformers>=3,<6",
]
search = [
  "meilisearch>=0.34,<1",
  "qdrant-client>=1.12,<2",
]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "backend"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = ["integration: requires network or local infrastructure"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["tests/fixtures"]
